crates/markdown-neuraxis-engine/src/editing/snapshots/blocks/list_checkbox_checked.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
List { ordered: false } [0..42]
  children:
    ListItem { marker: "- ", checkbox: [x] } [0..21]
      segments:
        Text [6..20] "Completed task"
    ListItem { marker: "- ", checkbox: [x] } [21..42]
      segments:
        Text [27..41] "Also completed"
