crates/markdown-neuraxis-engine/src/editing/snapshots/blocks/list_ordered_paren.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
Paragraph [0..43]
  segments:
    Text [0..42] "1) First item\n2) Second item\n3) Third item"
